fix spacing

--- a/client/src/components/topTracks.css
+++ b/client/src/components/topTracks.css
@@ -26,5 +26,5 @@
 
 .scrolling-wrapper {
     max-width:100%;
-    margin-top: 3vh;
+    margin-top: 5vh;
 }
