--- a/client/src/components/tracks.css
+++ b/client/src/components/tracks.css
@@ -57,7 +57,7 @@
 
 .scrolling-wrapper {
     max-width:100%;
-    margin-top: 3vh;
+    margin-top: 5vh;
 }
 
 .text-wrapper {
